Remove instantiation of Integer